--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,14 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.Downloads-mysql-connector-java-5.1.47.jar=../../Downloads/mysql-connector-java-5.1.47.jar
-file.reference.mysql-connector-java-5.1.47.jar=..\\..\\..\\Downloads\\mysql-connector-java-5.1.47.jar\\mysql-connector-java-5.1.47.jar
-file.reference.rs2xml.jar=../../../Downloads/rs2xml.jar
+file.reference.rs2xml.jar=../rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.47.jar}:\
-    ${file.reference.rs2xml.jar}:\
-    ${file.reference.Downloads-mysql-connector-java-5.1.47.jar}
+    ${file.reference.Downloads-mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
